# computer-vision-labs

./: BlackWhiteConverter.cpp  BlackWhiteConverter.h  CMakeLists.txt  Convolution.cpp  Convolution.h  Descriptor.cpp  Descriptor.h  DescriptorsKit.cpp  DescriptorsKit.h  Image.cpp  Image.h  InterestingPoints.cpp  InterestingPoints.h  KernelFactory.cpp  KernelFactory.h  Pyramid.cpp  Pyramid.h  Transform.cpp  Transform.h  main.cpp
